# prefixmaps

./: .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  intro.html  modules.html  objects.inv  prefixmaps.data.html  prefixmaps.datamodel.html  prefixmaps.html  prefixmaps.ingest.html  prefixmaps.io.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/workflows/: doc_pages.yaml  main.yaml  pypi-publish.yaml  refresh.yml
_sources/: index.rst.txt  intro.md.txt
docs/: conf.py  index.rst  intro.md  modules.rst  prefixmaps.data.rst  prefixmaps.datamodel.rst  prefixmaps.ingest.rst  prefixmaps.io.rst  prefixmaps.rst
src/: __init__.py
src/prefixmaps/: __init__.py
src/prefixmaps/data/: __init__.py  bioportal.csv  bioportal.curated.yaml  bioregistry.csv  bioregistry.upper.csv  contexts.curated.yaml  go.csv  linked_data.csv  linked_data.curated.yaml  merged.csv  merged.monarch.csv  merged.oak.csv  obo.csv  prefixcc.csv  w3id.csv
src/prefixmaps/datamodel/: context.py
src/prefixmaps/etl/: etl_runner.py  ingest_bioregistry.py  ingest_jsonld.py  ingest_shacl.py
src/prefixmaps/ingest/: etl_runner.py  ingest.py  ingest_bioportal.py  ingest_bioregistry.py  ingest_go.py  ingest_jsonld.py  ingest_linkml.py  ingest_shacl.py  ingest_w3id.py
src/prefixmaps/io/: parser.py  writer.py
src/prefixmaps/linkml/: prefixmap.yaml
src/sparql/: get-prefixes.rq
tests/input/: bioportal.yaml  prefix-cc.context.jsonld
tests/output/: bar.csv
tests/test_core/: test_curies.py  test_integrity.py  test_prefixmaps.py
tests/test_etl/: test_bioportal.py  test_bioregistry.py  test_go.py  test_obo.py  test_prefix_cc.py  test_w3id.py
