[tool.poetry]
name = "prefixmaps"
version = "0.1.4"
description = "A python library for retrieving semantic prefix maps"
readme = "README.md"
authors = ["cmungall <cjm@berkeleybop.org>"]
keywords = ["semantic web", "bioinformatics"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.urls]
repository = "https://github.com/linkml/prefixmaps"
homepage = "https://github.com/linkml/prefixmaps"
"Bug Tracker" = "https://github.com/linkml/prefixmaps/issues"


[tool.poetry.dependencies]
python = "^3.8.0"
pyyaml = ">=5.3.1"
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
Sphinx = {version = "^5.3.0", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^0.18.1", extras = ["docs"]}
click = ">=8.1.3"
requests = {version = "^2.28.1", extras = ["refresh"]}
bioregistry = {version = "^0.10.0", extras = ["refresh"]}
rdflib = {version = "^6.2.0", extras = ["refresh"]}
curies = ">=0.5.3"
tox = "^4.11.3"
# this forces tox to use pydantic ^1 instead of installing pydantic 2 as part of its "refresh" environment.
# bioregistry is still at pydantic 1.0, so this is necessary to avoid refresh failure.
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
linkml = ">=1.3.1"
coverage = ">=6.4.4"
typing-extensions = ">=4.4.0"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
]
refresh = [
    "requests",
    "bioregistry",
    "rdflib"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slurp-prefixmaps = "prefixmaps.ingest.etl_runner:cli"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
