[tool.poetry]
name = "prefixmaps"
version = "0.0.0"
description = "A python library for retrieving semantic prefix maps"
readme = "README.md"
authors = ["cmungall <cjm@berkeleybop.org>"]
keywords = ["semantic web", "bioinformatics"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
repository = "https://github.com/linkml/prefixmaps"
homepage = "https://github.com/linkml/prefixmaps"
"Bug Tracker" = "https://github.com/linkml/prefixmaps/issues"


[tool.poetry.dependencies]
python = "^3.9"
pyyaml = ">=5.3.1"
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
Sphinx = {version = "^7.2.6", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.23.4", extras = ["docs"]}
sphinx-click = {version = "^4.3.0", extras = ["docs"]}
myst-parser = {version = "^2.0.0", extras = ["docs"]}
click = ">=8.1.3"
requests = {version = "^2.28.1", extras = ["refresh"]}
bioregistry = {version = "^0.10.65", extras = ["refresh"]}
rdflib = {version = "^6.2.0", extras = ["refresh"]}
curies = ">=0.5.3"
tox = "^4.11.3"
pydantic = "^2.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"


[tool.poetry.dev-dependencies]
pytest = ">=6.2"
coverage = ">=6.4.4"
typing-extensions = ">=4.4.0"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
]
refresh = [
    "requests",
    "bioregistry",
    "rdflib"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
slurp-prefixmaps = "prefixmaps.ingest.etl_runner:cli"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
