[tool.poetry]
name = "prefixmaps"
version = "0.0.0"
description = "A python library for retrieving semantic prefix maps"
readme = "README.md"
authors = ["cmungall <cjm@berkeleybop.org>"]
keywords = ["semantic web", "bioinformatics"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
repository = "https://github.com/linkml/prefixmaps"
homepage = "https://github.com/linkml/prefixmaps"
"Bug Tracker" = "https://github.com/linkml/prefixmaps/issues"


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = ">=5.3.1"
curies = ">=0.5.3"

[tool.poetry.group.test.dependencies]
pytest = ">=6.2"
coverage = ">=6.4.4"
tox = "^4.11.3"

[tool.poetry.group.docs.dependencies]
myst-parser = "*"
sphinx = ">=7.0.0"
sphinx-autodoc-typehints = "*"
sphinx-click = "*"
sphinx-rtd-theme = "*"

[tool.poetry.group.refresh.dependencies]
click = ">=8.1.3"
requests = "^2.28.1"
bioregistry = "^0.11.10"
rdflib = "^6.2.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
slurp-prefixmaps = "prefixmaps.ingest.etl_runner:cli"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
reverse_relative = true
